force-app/main/default/objects/MaterialDescription__c/MaterialDescription__c.object-meta.xml
<CustomObject>
    <description>This object will store the descriptions for each material provided by SAP. Material Descritpions will be available in multiple language, as provided by the SAP system. Only Admins (System/Novartis) will be allowed to manually update records in this object. Material Descriptions are used on Labels, Forms, and Certicates of Conformance.</description>
    <label>Material Description</label>
    <nameField>
        <label>Material Description Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Material Descriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>