force-app/main/default/objects/MaterialDescription__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>To be populated by workflow or trigger - "Material_Language Code"</description>
    <externalId>true</externalId>
    <label>Unique ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>