force-app/main/default/objects/MaterialDescription__c/fields/ReasonForChange__c.field-meta.xml
<CustomField>
    <fullName>ReasonForChange__c</fullName>
    <description>Nayaksa3 10-6-2015: Created to support audit trail framework</description>
    <label>CCL Reason for Change</label>
    <type>TextArea</type>
</CustomField>